# FluentUI_Fw

./: README.md
build-fluentui_fw-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  appfluentui_fw.exp  appfluentui_fw.ilk  appfluentui_fw.lib  appfluentui_fw_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake  qtcsettings.cmake  version_example.rc  version_fluentui.rc  version_fluentuiplugin.rc
build-fluentui_fw-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/.qt/: QtDeploySupport.cmake
build-fluentui_fw-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/.qt/deploy_qml_imports/: appfluentui_fw.cmake
build-fluentui_fw-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_appfluentui_fw.cmake  Qt6_QmlPlugins_Imports_appfluentui_fw.rsp
build-fluentui_fw-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/.qtc_clangd/: compile_commands.json
build-fluentui_fw-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/.rcc/: appfluentui_fw_raw_qml_0.qrc  qmake_fluentui_fw.qrc  qrc_appfluentui_fw_raw_qml_0.cpp  qrc_qmake_fluentui_fw.cpp
build-fluentui_fw-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/.rcc/qmlcache/: appfluentui_fw_Main_qml.cpp  appfluentui_fw_qml_loader_file_list.rsp  appfluentui_fw_qmlcache_loader.cpp
build-fluentui_fw-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/.rcc/qmlcache/appfluentui_fw_qml-Qt6/: App_qml.cpp
build-fluentui_fw-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/.rcc/qmlcache/appfluentui_fw_src/: main_qml.cpp
build-fluentui_fw-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/FluentUI/: cmake_install.cmake  fluentuiplugin.lib  plugins.qmltypes  qmldir
build-fluentui_fw-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/FluentUI/example/: cmake_install.cmake
build-fluentui_fw-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/FluentUI/example/.rcc/: example_raw_qml_0.qrc  qmake_example.qrc
build-fluentui_fw-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/FluentUI/example/example/: qmldir
build-fluentui_fw-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/FluentUI/example/qmltypes/: example_foreign_types.txt
build-fluentui_fw-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/FluentUI/src/: cmake_install.cmake  fluentui_qmltyperegistrations.cpp  fluentuiplugin_init.cpp
build-fluentui_fw-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/FluentUI/src/.rcc/: fluentui_raw_qml_0.qrc  qmake_FluentUI.qrc  qrc_qmake_FluentUI.cpp
build-fluentui_fw-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/FluentUI/src/fluentui_autogen/: deps  mocs_compilation.cpp
build-fluentui_fw-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/appfluentui_fw_autogen/: deps
build-fluentui_fw-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/fluentui_fw/: Main.qml  qmldir
build-fluentui_fw-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/fluentui_fw/qml-Qt6/: App.qml
build-fluentui_fw-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/qmltypes/: appfluentui_fw_foreign_types.txt
build-fluentui_fw-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/src/: qmldir
build-fluentui_fw-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/src/.rcc/: fluentuiplugin_raw_qml_0.qrc  qmake_FluentUI.qrc
fluentui_fw/: CMakeLists.txt  Main.qml  main.cpp
fluentui_fw/src/: main.qml
fluentui_fw/src/ui/window/: MainWindow.qml
(+945 files in other folders)
